<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff123456"
    android:theme="@android:style/Theme.Holo"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="403dp"
        android:layout_height="665dp"
        android:layout_gravity="center_horizontal"
        android:background="#ff123456"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setupTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff234567"
            android:gravity="center_horizontal"
            android:paddingLeft="10dp"
            android:paddingTop="20dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp"
            android:text="@string/daily_diary_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TableRow>

                <TextView
                    android:id="@+id/paramLabel"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/day_of_the_week_log"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramLabelOrder"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:text=" /5"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/paramLabelGain"
                    android:gravity="left"
                    android:paddingRight="5dp"
                    android:text="@string/input_type"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/paramLabelOrderOfControl"
                    android:layout_width="154dp"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:text="@string/slider"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

        </TableLayout>

        <!-- Question TextView -->
        <TextView
            android:id="@+id/questionTextViewW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/water_intake"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Cups1_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_3_cups" />

            <TextView
                android:id="@+id/Cups3_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3_5_cups" />

            <TextView
                android:id="@+id/Cups6_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6_7_cups" />

            <TextView
                android:id="@+id/Cups8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8_cups" />

        </LinearLayout>

        <TextView
            android:id="@+id/questionTextViewST"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/screen_time"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ST1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_hour" />

            <TextView
                android:id="@+id/ST2_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2_3_hours" />

            <TextView
                android:id="@+id/ST4_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4_6_hours" />

            <TextView
                android:id="@+id/ST7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7_hours" />


        </LinearLayout>

        <TextView
            android:id="@+id/questionTextViewSL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hours_of_sleep"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="4"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/SL1_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1_3_hours" />

            <TextView
                android:id="@+id/SL4_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4_6_hours" />


            <TextView
                android:id="@+id/SL7_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7_8_hours" />

            <TextView
                android:id="@+id/SL8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8_hours" />

        </LinearLayout>

        <TextView
            android:id="@+id/questionTextViewE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/energy_level"
            android:paddingLeft="16dp"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="5"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Exh"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/exhausted" />

            <TextView
                android:id="@+id/Tired"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tired" />

            <TextView
                android:id="@+id/OK"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/okay" />

            <TextView
                android:id="@+id/Energetic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/energetic" />

            <TextView
                android:id="@+id/FullyEnerg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fully_energized" />

        </LinearLayout>

        <TextView
            android:id="@+id/questionTextViewM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingLeft="16dp"
            android:text="@string/mindfulness_or_meditation"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/sliderSeekBar4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2"
            android:tickMark="@drawable/tick_mark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Mindful"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/no" />

            <TextView
                android:id="@+id/No"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/yes" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="128dp"
        android:layout_height="45dp"
        android:id="@+id/next"
        android:enabled="false"
        android:onClick="onNextButtonClick"
        android:layout_marginTop="12dp"
        android:text="@string/next">
    </Button>
</LinearLayout>